# fields

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: Conan.cmake  Standalone.cmake
examples/: CMakeLists.txt  Makefile  binary_io.cpp  byte_swap_demo.cpp  fields_demo.cpp  nolhmann_json.h  precision_demo.cpp  reflect_demo.cpp
fields/: CMakeLists.txt  assign.h  binary_io.h  compare.h  comparisons.h  core.h  describe.h  diff.h  enum_field.h  fields.h  for_each.h  has_fields.h  json_color.h  marshal.h  marshall.h  network_byte_order.h  reflect.h  serialize.h
fields/detail/: marshal_detail.h  marshall_detail.h
fields/reflect/: get_member_count.h  get_member_tuple.h  member_names.h  reflect.h
test/: CMakeLists.txt  byte_swap_tests.cpp  compare_tests.cpp  default_tests.cpp  diff_tests.cpp  fields_tests.cpp  marshal_tests.cpp  marshall_tests.cpp  reflect_tests.cpp
